# twizzler

./: .gitignore  .gitmodules  Cargo.toml
repro/: Cargo.toml
repro/.cargo/: config.toml
sha2/: Cargo.toml
sha2/src/: core_api.rs  lib.rs
sha2/src/sha256/: x86.rs
src/kernel/: Cargo.toml
src/kernel/.cargo/: config.toml
src/kernel/src/: crypto.rs  main.rs
src/kernel/src/syscall/: mod.rs
src/lib/kms/src/: ahashmap.rs  hashmap.rs  lib.rs  wal-original.rs
src/lib/obliviate/: Cargo.toml
src/lib/twizzler-object-store/: Cargo.toml
src/lib/twizzler-object-store/kms/src/: lib.rs
src/lib/twizzler-object-store/kms/src/hasher/: mod.rs
src/lib/twizzler-object-store/kms/src/io/: mod.rs
src/lib/twizzler-object-store/kms/src/io/crypt/: mod.rs  scrape.rs  versioned.rs
src/lib/twizzler-object-store/kms/src/io/crypt/keyed/: unpadded.rs
src/lib/twizzler-object-store/kms/src/khf/: kht.rs  node.rs  topology.rs
src/lib/twizzler-object-store/kms/src/khf/lethe/: mod.rs
src/lib/twizzler-object-store/src/: disk.rs  lib.rs  nvme.rs
src/lib/twizzler-object-store/src/nvme/: requester.rs
tools/xtask/src/: build.rs  qemu.rs
twizzler-object-store/: Cargo.toml
twizzler-object-store/kms/: Cargo.toml
twizzler-object-store/kms/src/: key.rs  localizer.rs  syncfile.rs  wal.rs
twizzler-object-store/kms/src/hasher/: blake3.rs
twizzler-object-store/kms/src/id/: mod.rs  seq.rs
twizzler-object-store/kms/src/io/: buffered.rs  stat.rs
twizzler-object-store/kms/src/io/crypt/: journaled.rs
twizzler-object-store/kms/src/khf/: khf.rs
twizzler-object-store/kms/src/khf/lethe/: arena.rs  mapped.rs
twizzler-object-store/src/nvme/: controller.rs  dma.rs
(+20 files in other folders)
