[package]
name = "twizzler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10.8", default-features = false, features = [
    "force-soft",
] }
