[package]
name = "kms"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_with = "3.10.0"
hex = "0.4.3"
crc = "3.0.1"
thiserror = "1.0.64"
paste = "1.0.15"
sha3 = "0.10.8"
blake3 = "1.5.4"
rand_chacha = "0.3.1"
itertools = "0.13.0"
lru-mem = "0.3.0"
bincode = "1.3.3"
aes = "0.8.4"
ctr = "0.9.2"
num-traits = "0.2.19"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
lethe = "0.8.0"

[dev-dependencies]
tempfile = "3.13.0"
anyhow = "1.0.89"
